--- a/css/styles.css
+++ b/css/styles.css
@@ -133,13 +133,13 @@ header .container {
   align-items: center;
   justify-content: center;
   background-color: #2e2f42;
+  padding: 188px 0;
 }
 .hero-section .container {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 188px 0;
 }
 
 .hero-section .text {
@@ -178,7 +178,7 @@ h2 {
   letter-spacing: 0.02em;
 }
 
-.features-section .container {
+.features-section {
   padding: 120px 0;
 }
 
@@ -220,13 +220,14 @@ h3 {
 
 .our-team-section {
   background-color: #f4f4fd;
+  padding: 120px 0;
 }
 
 .our-team-section .container {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 120px 0;
+
   flex-direction: column;
 }
 
@@ -262,14 +263,18 @@ h3 {
 
 .person {
   text-align: center;
+  margin-bottom: 8px;
 }
 
 .bio {
   text-align: center;
 }
 
-.portfolio-section .container {
+.portfolio-section {
   padding: 120px 0;
+}
+
+.portfolio-section .container {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -289,7 +294,7 @@ h3 {
   flex-direction: row;
 }
 .portfolio-list > li {
-  max-width: 360px;
+  width: calc((100% - 2 * 24px) / 3);
 }
 .portfolio-list > li > img {
   display: block;
@@ -306,9 +311,6 @@ h3 {
 .footer {
   color: #f4f4fd;
   background-color: #2e2f42;
-}
-
-footer .container {
   padding: 100px 0;
 }
 
