--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,7 @@ header .container {
   line-height: 1.5;
   font-style: normal;
   display: block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .menu-nav .link:hover {
   color: #404bbf;
@@ -89,12 +90,27 @@ header .container {
 }
 
 .link-studio {
+  display: inline-block;
+  position: relative;
   text-decoration: none;
-  color: #2e2f42;
+  color: #404bbf;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.link-studio::after {
+  position: absolute;
+  content: '';
+  bottom: 0;
+  left: 0;
+  background-color: #404bbf;
+  border: 1px solid #000;
+  border-radius: 2px;
+  width: 48px;
+  height: 4px;
+}
+
 .link-studio:hover {
   color: #404bbf;
 }
@@ -103,7 +119,6 @@ header .container {
 }
 .link-studio:active {
   color: #404bbf;
-  text-decoration: underline;
 }
 
 .address-header {
@@ -120,6 +135,7 @@ header .container {
   color: #434455;
   padding: 24px 0;
   display: block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-list > li > a:hover {
   color: #404bbf;
@@ -134,6 +150,12 @@ header .container {
   justify-content: center;
   background-color: #2e2f42;
   padding: 188px 0;
+  background-image:
+    linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+    url('../images/backgroundHero.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: auto auto;
 }
 .hero-section .container {
   display: flex;
@@ -163,6 +185,7 @@ header .container {
   border-radius: 4px;
   text-shadow: 0px 4px 4px #00000026;
   border: 0;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-section .button:hover {
   background-color: #404bbf;
@@ -204,6 +227,26 @@ h2 {
 
 .features-list li {
   width: calc((100% - 72px) / 4);
+}
+.box {
+  width: calc((100% - 72px) / 4);
+}
+
+.icon-features {
+  position: absolute;
+  left: 100px;
+  top: 24px;
+}
+
+.icon-container {
+  display: flex;
+  width: 264px;
+  height: 112px;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  background: #f4f4fd;
+  position: relative;
+  margin-bottom: 8px;
 }
 
 .features-list > li > h3 {
@@ -268,6 +311,30 @@ h3 {
 
 .bio {
   text-align: center;
+  margin-bottom: 8px;
+}
+
+.person-socials {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.social-item-link {
+  width: 40px;
+  height: 40px;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-item-link:hover {
+  background-color: #404bbf;
+}
+.social-svg {
+  fill: #ffffff;
 }
 
 .portfolio-section {
@@ -300,6 +367,25 @@ h3 {
   display: block;
 }
 
+.image-wraping {
+  position: relative;
+  overflow: hidden;
+}
+.overlay {
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.wrapping:hover .overlay {
+  transform: translateY(0);
+}
 .portfolio-info {
   padding: 32px 16px;
   border: #e7e9fc 1px solid;
@@ -314,6 +400,14 @@ h3 {
   padding: 100px 0;
 }
 
+.footer .container {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.footer-info {
+  margin-right: 100px;
+}
 .footer-logo {
   font-family: 'Raleway', sans-serif;
   color: #f4f4fd;
@@ -332,4 +426,34 @@ h3 {
   max-width: 264px;
 
   margin-top: 16px;
+}
+
+.footer-socials {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.footer-contact {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.footer-contacts-text {
+  font-weight: 500;
+}
+
+.footer-social-link {
+  width: 40px;
+  height: 40px;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-social-link:hover {
+  background-color: #31d0aa;
 }
