--- a/css/styles.css
+++ b/css/styles.css
@@ -362,6 +362,14 @@ h3 {
 }
 .portfolio-list > li {
   width: calc((100% - 2 * 24px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list > li:hover {
+  box-shadow:
+    0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16),
+    0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 .portfolio-list > li > img {
   display: block;
@@ -380,12 +388,14 @@ h3 {
   left: 0;
   width: 100%;
   height: 100%;
+
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .wrapping:hover .overlay {
   transform: translateY(0);
 }
+
 .portfolio-info {
   padding: 32px 16px;
   border: #e7e9fc 1px solid;
