--- a/css/styles.css
+++ b/css/styles.css
@@ -155,7 +155,10 @@ header .container {
     url('../images/backgroundHero.jpg');
   background-repeat: no-repeat;
   background-position: center;
-  background-size: auto auto;
+  background-size: cover;
+  max-width: 1440px;
+  margin: 0 auto;
+
 }
 .hero-section .container {
   display: flex;
@@ -360,7 +363,7 @@ h3 {
   row-gap: 48px;
   flex-direction: row;
 }
-.portfolio-list > li {
+.portfolio-card {
   width: calc((100% - 2 * 24px) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -392,7 +395,7 @@ h3 {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.wrapping:hover .overlay {
+.portfolio-card:hover .overlay {
   transform: translateY(0);
 }
 
@@ -412,12 +415,11 @@ h3 {
 
 .footer .container {
   display: flex;
-  align-items: flex-start;
+  align-items: baseline;
   justify-content: flex-start;
+  gap: 120px;
 }
-.footer-info {
-  margin-right: 100px;
-}
+
 .footer-logo {
   font-family: 'Raleway', sans-serif;
   color: #f4f4fd;
@@ -441,7 +443,7 @@ h3 {
 .footer-socials {
   display: flex;
   justify-content: center;
-  gap: 24px;
+  gap: 16px;
 }
 
 .footer-contact {
