--- a/css/styles.css
+++ b/css/styles.css
@@ -155,11 +155,13 @@ header .container {
     url('../images/backgroundHero.jpg');
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
-  max-width: 1440px;
+  background-size: cover 1440px;
   margin: 0 auto;
 
 }
+
+
+
 .hero-section .container {
   display: flex;
   align-items: center;
