--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,10 @@ body {
 
 header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow:
+    0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16),
+    0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 header .container {
@@ -145,9 +149,6 @@ header .container {
 }
 
 .hero-section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background-color: #2e2f42;
   padding: 188px 0;
   background-image:
@@ -155,12 +156,10 @@ header .container {
     url('../images/backgroundHero.jpg');
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover 1440px;
+  background-size: cover;
   margin: 0 auto;
-
+  max-width: 1440px;
 }
-
-
 
 .hero-section .container {
   display: flex;
@@ -419,7 +418,10 @@ h3 {
   display: flex;
   align-items: baseline;
   justify-content: flex-start;
-  gap: 120px;
+}
+
+.footer-info {
+  margin-right: 120px;
 }
 
 .footer-logo {
